--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>${druid-version}</version>
+			<version>1.1.9</version>
 		</dependency>
 
 		<dependency>
